--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
-    "react-markdown": "^4.3.1"
+    "react-markdown": "^4.3.1",
+    "typeface-roboto": "0.0.75",
+    "typeface-ultra": "0.0.72"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
